--- a/.github/workflows/CI-e2e-test.yml
+++ b/.github/workflows/CI-e2e-test.yml
@@ -4,7 +4,7 @@ run-name: "Workflow performing CI steps: end-to-end tests on zombienet"
 
 on:
   pull_request:
-    types: [opened, synchronize]
+    types: [opened]
   push:
     branches: [main]
   workflow_dispatch:
