updated CI strategy

--- a/.github/workflows/CI-build-test.yml
+++ b/.github/workflows/CI-build-test.yml
@@ -5,8 +5,7 @@ run-name: "Workflow performing CI steps: build, unit testing, integration testin
 on:
   pull_request:
     types: [opened]
-  push:
-    branches: [main]
+  merge_group:
   workflow_dispatch:
 
 env:
