--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,8 @@ rstest_reuse = { version = "0.7.0" }
 
 sc-cli = { version = "0.35.0" }
 sc-executor = { version = "0.31.0" }
-sc-network = { version = "0.33.0" }
-sc-service = { version = "0.34.0" }
+sc-network = "0.33.0"
+sc-service = "0.34.0"
 sc-telemetry = { version = "14.0.0" }
 sc-transaction-pool = { version = "27.0.0" }
 sc-transaction-pool-api = { version = "27.0.0" }
